# ray-tracer

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  Light.cpp  Light.h  README.md  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  cwasm.sh  main.cpp
Eigen/src/Eigenvalues/: GeneralizedEigenSolver.h  HessenbergDecomposition.h
Eigen/src/Geometry/: Transform.h
Eigen/src/plugins/: IndexedViewMethods.h
pf-server/: .gitignore  index.js  package-lock.json  package.json  shell.js
